--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -1,8 +1,5 @@
-<form materialize class="col s12">
-  <div class="row">
-    <div class="input-field col s6">
-      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-      <label for="first_name">First Name</label>
-    </div>
-  </div>
-</form>
+<app-navbar></app-navbar>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
