--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -1,5 +1,18 @@
-<app-navbar></app-navbar>
+<nav>
+  <div class="nav-wrapper deep-purple darken-4 z-depth-2">
+    <a routerLink="" class="brand-logo">Logo</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <li routerLinkActive="active"><a [routerLink]="['curso', valorId.value]">Entre com ID</a></li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
+  
+  <p>Entre com id:</p>
+  <input #valorId>
+  
   <router-outlet></router-outlet>
 </div>
