Criando módulos de funcionalidade e de roteamento

--- a/rotas/src/app/app.component.html
+++ b/rotas/src/app/app.component.html
@@ -5,6 +5,7 @@
       <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
       <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
       <li routerLinkActive="active"><a [routerLink]="['curso', valorId.value]">Entre com ID</a></li>
+      <li routerLinkActive="active"><a routerLink="/alunos">Login</a></li>
     </ul>
   </div>
 </nav>
